--- a/site.css
+++ b/site.css
@@ -29,7 +29,7 @@ canvas{
     -ms-transform: translate(-50%, -50%);
     -o-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     /*width:100% !important;*/
     /*height:100% !important;*/
 }
