--- a/site.css
+++ b/site.css
@@ -19,8 +19,11 @@ div {
 #phaser-div{
     height:100%;
     width:100%;
+
 }
 canvas{
+
+    border: 1px solid black;
     position: absolute;
     left:50%;
     top:50%;
