--- a/src/Menus/TopMenu/top-menu.css
+++ b/src/Menus/TopMenu/top-menu.css
@@ -2,9 +2,10 @@
     background-color: #eaeaea;
     width:100%;
     height:5%;
-    position:fixed;
+    /*position:fixed;*/
     top:0;
     left:0;
+    z-index:100;
 }
 
 #logo-wrapper{
