Added players in the top menu. Fixed a couple of small structural problems.

--- a/src/Menus/TopMenu/top-menu.css
+++ b/src/Menus/TopMenu/top-menu.css
@@ -79,7 +79,7 @@
     transform: translateX(-50%) translateY(-50%);
 }
 
-.player-number{
+#player-number{
     position:absolute;
     font-size: 0.9em;
     text-align: center;
