--- a/src/Menus/TopMenu/top-menu.css
+++ b/src/Menus/TopMenu/top-menu.css
@@ -1,36 +1,37 @@
 #top-container {
     background-color: #eaeaea;
-    width:100%;
-    height:5%;
+    width: 100%;
+    height: 5%;
     /*position:fixed;*/
-    top:0;
-    left:0;
-    z-index:100;
-    user-select:none;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    user-select: none;
 }
 
-#logo-wrapper{
-    position:relative;
-    float:left;
-    height:80%;
-    width:auto;
-    display:inline-block;
-    top:50%;
-    transform:translateY(-50%);
-    margin-right:2%;
-    margin-left:1%;
+#logo-wrapper {
+    position: relative;
+    float: left;
+    height: 80%;
+    width: auto;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-right: 2%;
+    margin-left: 1%;
 
 }
 
-.top-menu-logo{
-    height:100%;
-    position:relative;
-    float:left;
+.top-menu-logo {
+    height: 100%;
+    position: relative;
+    float: left;
 }
-.top-menu-img{
-    height:100%;
-    position:relative;
-    float:left;
+
+.top-menu-img {
+    height: 100%;
+    position: relative;
+    float: left;
     -webkit-transition: transform 200ms;
     -moz-transition: transform 200ms;
     -ms-transition: transform 200ms;
@@ -38,92 +39,94 @@
     transition: transform 200ms;
 }
 
-.top-menu-img:hover{
-    transform:scale(1.2);
-    cursor:pointer;
+.top-menu-img:hover {
+    transform: scale(1.2);
+    cursor: pointer;
 }
 
-.button-wrapper{
-    position:relative;
-    float:left;
-    height:60%;
-    width:auto;
-    display:inline-block;
-    top:50%;
-    transform:translateY(-50%);
-    margin:0 0.3%;
-}
-#input-load{
-    display:none;
+.button-wrapper {
+    position: relative;
+    float: left;
+    height: 60%;
+    width: auto;
+    display: inline-block;
+    top: 50%;
+    transform: translateY(-50%);
+    margin: 0 0.3%;
 }
 
-
-#minusP-wrapper{
-    margin-left:5%;
-    height:40%;
-}
-#plusP-wrapper{
-    height:40%;
-    margin-right:5%;
-}
-.player-number-wrapper{
-    margin:0;
-    cursor:default;
+#input-load {
+    display: none;
 }
 
-.player{
+#minusP-wrapper {
+    margin-left: 5%;
+    height: 40%;
+}
+
+#plusP-wrapper {
+    height: 40%;
+    margin-right: 5%;
+}
+
+.player-number-wrapper {
+    margin: 0;
+    cursor: default;
+}
+
+.player {
     position: relative;
     /*float:center;*/
     width: auto;
     height: 120%;
-    left:50%;
-    top:50%;
+    left: 50%;
+    top: 50%;
     transform: translateX(-50%) translateY(-50%);
 }
 
-#player-number{
-    position:absolute;
+#player-number {
+    position: absolute;
     font-size: 0.9em;
     text-align: center;
     font-family: Arial Black, serif;
     color: #fbfffb;
-    left:50%;
-    top:85%;
+    left: 50%;
+    top: 85%;
     transform: translateX(-50%) translateY(-50%);
     backface-visibility: hidden;
 }
 
-.tooltip{
+.tooltip {
     visibility: hidden;
-    font-size:1em;
-    white-space:nowrap;
-    top:50%;
-    left:50%;
+    font-size: 1em;
+    white-space: nowrap;
+    top: 50%;
+    left: 50%;
     transform: translateX(-50%) translateY(100%);
     background-color: #ffffcc;
     color: black;
-    text-align:center;
+    text-align: center;
     padding: 5px;
-    position:absolute;
+    position: absolute;
     z-index: 200;
-    opacity:0;
+    opacity: 0;
     transition: opacity 300ms linear;
-    transition-delay:700ms;
+    transition-delay: 700ms;
     backface-visibility: hidden;
     border: 1px solid black;
 }
 
-.button-wrapper:hover .tooltip{
-    visibility:visible;
-    opacity:1;
+.button-wrapper:hover .tooltip {
+    visibility: visible;
+    opacity: 1;
 }
 
-#random-payoffs-wrapper{
-    margin-left:5%;
+#random-payoffs-wrapper {
+    margin-left: 5%;
 }
 
-#strat-form-button{
-    margin-left:10%;
+#strat-form-button {
+    margin-left: 10%;
     background: -webkit-gradient(linear, left top, left bottom, from(#757575), to(#4b4b4b));
     border: 1px solid #555;
     color: white;
@@ -131,35 +134,36 @@
     text-decoration: none;
     display: inline-block;
     font: 14px/100% Arial, Helvetica, sans-serif;
-    text-shadow: 0 1px 1px rgba(0,0,0,.3);
-    border-radius:0.5em;
+    text-shadow: 0 1px 1px rgba(0, 0, 0, .3);
+    border-radius: 0.5em;
     -webkit-transition-duration: 0.4s; /* Safari */
     transition-duration: 0.4s;
 }
-#strat-form-button:hover{
+
+#strat-form-button:hover {
     background: -webkit-gradient(linear, left top, left bottom, from(#f0f0f0), to(#e0e0e0));
-    color:black;
+    color: black;
 }
 
-#info-button-wrapper{
+#info-button-wrapper {
     float: right;
 
 }
 
-#settings-button-wrapper{
+#settings-button-wrapper {
     float: right;
 }
 
-#video-button-wrapper{
-    float:right;
-    margin-right:5%;
+#video-button-wrapper {
+    float: right;
+    margin-right: 5%;
 
 }
 
-.info-main-container{
+.main-container {
     position: absolute;
-    top:50%;
-    left:50%;
+    top: 50%;
+    left: 50%;
     width: 60%;
     /*padding-bottom: 40%;*/
     background: #2f2f2f;
@@ -168,11 +172,12 @@
     z-index: 2000;
 }
 
-.info-main-container.show-container{
-    display: block; !important
+.main-container.show-container {
+    display: block;
+!important
 }
 
-.close-info{
+.close-button {
     position: absolute;
     top: 0.8%;
     right: 0.5%;
@@ -181,16 +186,16 @@
     z-index: 100;
 }
 
-.close-info-img{
+.close-img {
     position: absolute;
     width: 100%;
     height: 100%;
-    cursor:pointer;
+    cursor: pointer;
 }
 
-.row{
+.row {
     padding-bottom: 3.5%;
-    width:100%;
+    width: 100%;
     position: relative;
     float: left;
     background: white;
@@ -200,19 +205,19 @@
     background: #2f2f2f;
 }
 
-#title .section-text{
+#title .section-text {
     color: ghostwhite;
 }
 
-#title .section-text .explain{
+#title .section-text .explain {
     color: white;
     font-weight: bolder;
 }
 
-.section-hotkey{
+.section-hotkey {
     position: absolute;
-    left:2%;
-    top:50%;
+    left: 2%;
+    top: 50%;
     transform: translateY(-57%);
     color: #777;
     display: inline-block;
@@ -235,7 +240,7 @@
     width: 2.5%;
 }
 
-.hotkey{
+.hotkey {
     position: absolute;
     left: 50%;
     top: 50%;
@@ -245,15 +250,15 @@
 
 }
 
-.section-text{
+.section-text {
     position: absolute;
     left: 15%;
     width: 70%;
-    padding-bottom:3%;
+    padding-bottom: 3%;
     /*background: black;*/
 }
 
-.explain{
+.explain {
     position: absolute;
     font-size: 0.9em;
     left: 50%;
@@ -265,79 +270,84 @@
 
 }
 
-#delete .section-hotkey{
+#delete .section-hotkey {
     width: 10%;
 }
 
-#zero-or-c .section-hotkey{
+#zero-or-c .section-hotkey {
     width: 4%;
 }
 
-#one-four .section-hotkey{
+#one-four .section-hotkey {
     width: 3.5%;
 }
 
-#enter .section-hotkey{
+#enter .section-hotkey {
     width: 6%;
 }
 
-#tab .section-hotkey{
+#tab .section-hotkey {
     width: 4%;
 }
 
-#shift-tab .section-hotkey{
+#shift-tab .section-hotkey {
     width: 10%;
 }
-#esc .section-hotkey{
+
+#esc .section-hotkey {
     width: 4%;
 }
-#alt-n .section-hotkey{
+
+#alt-n .section-hotkey {
     width: 7%;
 }
-#alt-s .section-hotkey{
+
+#alt-s .section-hotkey {
     width: 7%;
 }
-#alt-i .section-hotkey{
+
+#alt-i .section-hotkey {
     width: 7%;
 }
-#ctrl-z .section-hotkey{
+
+#ctrl-z .section-hotkey {
     width: 7%;
 }
-#ctrl-shift-z .section-hotkey{
+
+#ctrl-shift-z .section-hotkey {
     width: 13%;
 }
-#arrow-keys .section-hotkey{
+
+#arrow-keys .section-hotkey {
     width: 7%;
 }
 
-
-.settings-menu-container{
+.settings-menu-container {
     position: absolute;
     width: 15%;
-    right:0%;
+    right: 0%;
     top: 5%;
     transform: translateX(100%);
     transition: 500ms transform linear;
     background: #eaeaea;
 }
 
-.settings-menu-container.slide-in{
+.settings-menu-container.slide-in {
     transform: translateX(0%);
     transition: 500ms transform linear;
 }
 
-
-.range-slider-tree{
+.range-slider-tree {
     margin: 3%;
     position: relative;
 }
 
-.range-slider-level{
+.range-slider-level {
     margin: 3%;
     position: relative;
 }
 
-.title{
+.title {
     text-align: left;
     font-size: 0.9em;
     font-family: "Arial", sans-serif;
@@ -354,6 +364,7 @@
     background: #ccc;
     outline: none;
 }
+
 .input-range::-webkit-slider-thumb {
     -webkit-appearance: none;
     width: 15px;
@@ -364,12 +375,15 @@
     -webkit-transition: background .15s ease-in-out;
     transition: background .15s ease-in-out;
 }
+
 .input-range::-webkit-slider-thumb:hover {
     background: #e06161;
 }
+
 .input-range:active::-webkit-slider-thumb {
     background: #e06161;
 }
+
 .input-range::-moz-range-thumb {
     width: 15px;
     height: 15px;
@@ -380,9 +394,11 @@
     -webkit-transition: background .15s ease-in-out;
     transition: background .15s ease-in-out;
 }
+
 .input-range::-moz-range-thumb:hover {
     background: #e06161;
 }
+
 .input-range:active::-moz-range-thumb {
     background: #e06161;
 }
@@ -395,4 +411,18 @@ input {
     border-radius: 5px;
     font-size: 1em;
     text-align: center;
+}
+
+
+#video-wrapper {
+    float: left;
+    position: relative;
+    width: 99%;
+    height: 60vh;
+    padding: 0 0.5% 0.5% 0.5%;
+}
+
+#video-wrapper iframe {
+    width: 100%;
+    height: 100%;
 }
